<resources>
    <string name="app_name">Easy Chess</string>
    <string name="engine_hash_default">64</string>
    <string name="moves_per_session_default">60</string>
    <string name="time_control_default">120000</string>
    <string name="time_increment_default">0</string>
    <string name="squareSelectType_default">1</string>
    <string name="language_default">default</string>
    <string name="font_size_default">12</string>
    <string name="thinking_arrows_default">4</string>
    <string name="scroll_sensitivity_default">2</string>
    <string name="book_line_length_default">1000000</string>
    <string name="viewPieceType_default">1</string>
    <string name="viewPieceSet_default">chesscases</string>
    <string name="autoDelay_default">5000</string>
    <string name="move_announce_type_default">off</string>
    <string name="highlight_last_move_title">Highlight last move</string>
    <string name="highlight_last_move_summary">Draw rectangle around last moved piece</string>
    <string name="material_diff_title">Show Material Difference</string>
    <string name="material_diff_summary">Displays an additional subtitle for captured pieces</string>
    <string name="prefs_playing_options">Playing Options</string>
    <string name="prefs_playerName_title">Player Name</string>
    <string name="prefs_playerName_summary">Default player name in new games</string>
    <string name="prefs_autoSwapSides_title">Flip Board: Auto</string>
    <string name="prefs_autoSwapSides_summary">Use side to move to flip board automatically</string>
    <string name="prefs_playerNameFlip_title">Flip Board: Player</string>
    <string name="prefs_playerNameFlip_summary">Use Player Name to flip board automatically</string>
    <string name="prefs_engine_settings">Engine Settings</string>
    <string name="prefs_ponderMode_title">Pondering</string>
    <string name="prefs_ponderMode_summary">Let engine think while waiting for opponent\'s move. Supported by most engines.</string>
    <string name="prefs_hash_title">Hash Table</string>
    <string name="prefs_hash_summary">Hash table size in megabytes</string>
    <string name="prefs_time_control">Time Control</string>
    <string name="prefs_movesPerSession_title">Moves</string>
    <string name="prefs_movesPerSession_summary">Number of moves between time controls</string>
    <string name="prefs_timeControl_title">Time</string>
    <string name="prefs_timeControl_summary">Maximum thinking time between time controls</string>
    <string name="prefs_timeIncrement_title">Increment</string>
    <string name="prefs_timeIncrement_summary">Extra thinking time for each completed move</string>
    <string name="prefs_autoDelay_title">Auto Move Delay</string>
    <string name="prefs_autoDelay_summary">Delay between moves in automatic forward/backward mode</string>
    <string name="prefs_hints">Hints</string>
    <string name="prefs_showThinking_title">Show Computer Thinking</string>
    <string name="prefs_showThinking_summary">Display computer algorithm information during search</string>
    <string name="prefs_whiteBasedScores_title">White-based scores</string>
    <string name="prefs_whiteBasedScores_summary">Positive analysis scores are good for white</string>
    <string name="prefs_bookHints_title">Show Book Hints</string>
    <string name="prefs_bookHints_summary">Display opening book move hints for human player</string>
    <string name="prefs_thinkingArrows_title">Use Arrows</string>
    <string name="prefs_thinkingArrows_summary">Use arrows to display moves on chess board</string>
    <string name="prefs_ecoHints_title">Show ECO codes</string>
    <string name="prefs_ecoHints_summary">Show \'Encyclopedia of Chess Openings\' classification of openings</string>
    <string name="prefs_user_interface_appearance">Appearance</string>
    <string name="prefs_user_interface_behavior">Behavior</string>
    <string name="prefs_animateMoves_title">Animate Moves</string>
    <string name="prefs_animateMoves_summary">Animate piece movements</string>
    <string name="prefs_autoScrollTitle_title">Titlebar Scrolling</string>
    <string name="prefs_autoScrollTitle_summary">Auto scroll titlebar if player names are too long</string>
    <string name="prefs_quickMoveInput_title">Quick Move Input</string>
    <string name="prefs_quickMoveInput_summary">From and To squares can be touched in any order. Move is played as soon as uniquely defined.</string>
    <string name="prefs_moveSoundEnabled_title">Move sound</string>
    <string name="prefs_moveSoundEnabled_summary">Play sound when computer makes a move</string>
    <string name="prefs_moveAnnounceType_title">Speak moves</string>
    <string name="prefs_moveAnnounceType_summary">Speak when computer makes a move</string>
    <string name="prefs_vibrateEnabled_title">Enable Vibration</string>
    <string name="prefs_vibrateEnabled_summary">Vibrate when computer makes a move</string>
    <string name="prefs_fullScreenMode_title">Fullscreen Mode</string>
    <string name="prefs_fullScreenMode_summary">Fullscreen mode hides the status bar</string>
    <string name="prefs_wakeLock_title">Disable Screen Timeout</string>
    <string name="prefs_drawSquareLabels_title">Square Labels</string>
    <string name="prefs_drawSquareLabels_summary">Display square labels: a–h and 1–8</string>
    <string name="prefs_dragMoveEnabled_title">Drag Pieces</string>
    <string name="prefs_dragMoveEnabled_summary">Drag a piece to make a move</string>
    <string name="prefs_scrollSensitivity_title">Scrolling Speed</string>
    <string name="prefs_scrollSensitivity_summary">Scrolling speed for game navigation</string>
    <string name="prefs_invertScrollDirection_title">Invert Scroll Direction</string>
    <string name="prefs_invertScrollDirection_summary">Enable this if you think scrolling moves in the wrong direction</string>
    <string name="prefs_scrollGames_title">Sweep horizontally loads game</string>
    <string name="prefs_scrollGames_summary">If enabled, sweeping horizontally on the chess board moves to the next/previous game</string>
    <string name="prefs_autoScrollMoveList_title">Auto scroll move list</string>
    <string name="prefs_autoScrollMoveList_summary">Automatically scroll the move list to the current board position</string>
    <string name="prefs_discardVariations_title">Discard variations</string>
    <string name="prefs_discardVariations_summary">Discard non-mainline moves from move list</string>
    <string name="prefs_leftHanded_title">Left-handed mode</string>
    <string name="prefs_leftHanded_summary">Controls on left side in landscape mode</string>
    <string name="prefs_squareSelectType_title">Square selection</string>
    <string name="prefs_squareSelectType_summary">Control how selecting squares on the chess board behaves</string>
    <string name="prefs_language_title">Language</string>
    <string name="prefs_language_summary">User interface language</string>
    <string name="prefs_fontSize_title">Text Size</string>
    <string name="prefs_fontSize_summary">Font size for move list and game information</string>
    <string name="prefs_buttonSettings_title">Configure Buttons</string>
    <string name="prefs_buttonSettings_summary">Configure button size and button actions.</string>
    <string name="prefs_colors_title">Color Settings</string>
    <string name="prefs_colors_summary">Change individual colors</string>
    <string name="prefs_other">Other</string>
    <string name="prefs_pgn_viewer">PGN viewer</string>
    <string name="prefs_viewVariations_title">Variations</string>
    <string name="prefs_viewVariations_summary">Include non-mainline moves</string>
    <string name="prefs_viewComments_title">Comments</string>
    <string name="prefs_viewComments_summary">Include user written comments</string>
    <string name="prefs_viewNAG_title">Annotations</string>
    <string name="prefs_viewNAG_summary">Include numeric annotation glyphs (NAGs), such as ! and ?</string>
    <string name="prefs_viewHeaders_title">Headers</string>
    <string name="prefs_viewHeaders_summary">Show PGN header lines</string>
    <string name="prefs_showVariationLine_title">Show Current Variations</string>
    <string name="prefs_showVariationLine_summary">Show current variations in status area</string>
    <string name="prefs_viewPieceType_title">Piece Names</string>
    <string name="prefs_viewPieceType_summary">Control how chess piece names are displayed</string>
    <string name="prefs_viewPieceSet_title">Piece Set</string>
    <string name="prefs_viewPieceSet_summary">Select chess piece set</string>
    <string name="prefs_blindMode_title">Blindfold mode</string>
    <string name="prefs_blindMode_summary">Show blank board instead of pieces</string>
    <string name="prefs_pgn_import">PGN import</string>
    <string name="prefs_importVariations_title">Variations</string>
    <string name="prefs_importVariations_summary">Include non-mainline moves</string>
    <string name="prefs_importComments_title">Comments</string>
    <string name="prefs_importComments_summary">Include user written comments</string>
    <string name="prefs_importNAG_title">Annotations</string>
    <string name="prefs_importNAG_summary">Include numeric annotation glyphs (NAGs), such as ! and ?</string>
    <string name="prefs_pgn_export">PGN export</string>
    <string name="prefs_exportVariations_title">Variations</string>
    <string name="prefs_exportVariations_summary">Include non-mainline moves</string>
    <string name="prefs_exportComments_title">Comments</string>
    <string name="prefs_exportComments_summary">Include user written comments</string>
    <string name="prefs_exportNAG_title">Annotations</string>
    <string name="prefs_exportNAG_summary">Include numeric annotation glyphs (NAGs), such as ! and ?</string>
    <string name="prefs_exportPlayerAction_title">Player Actions</string>
    <string name="prefs_exportPlayerAction_summary">Include information about draw and resign actions</string>
    <string name="prefs_exportTime_title">Clock</string>
    <string name="prefs_exportTime_summary">Include time information for each move</string>
    <string name="prefs_tbHints_title">Show Hints</string>
    <string name="prefs_tbHints_summary">When touching a piece, show tablebase value for all possible moves by that piece</string>
    <string name="prefs_tbHintsEdit_title">Edit Board Hints</string>
    <string name="prefs_tbHintsEdit_summary">When touching a piece in edit board mode, show tablebase value for all possible alternate positions of that piece</string>
    <string name="prefs_tbRootProbe_title">Probe at Root</string>
    <string name="prefs_tbRootProbe_summary">Filter out non-optimal moves before starting search</string>
    <string name="prefs_tbEngineProbe_title">Engine Probing</string>
    <string name="prefs_tbEngineProbe_summary">Enable tablebase probing in engine, when supported</string>
    <string name="prefs_gtbPath_title">GTB Directory</string>
    <string name="prefs_gtbPath_summary">Directory where Gaviota tablebases are installed. Leave blank to use default directory</string>
    <string name="prefs_gtbPathNet_title">GTB Network Directory</string>
    <string name="prefs_gtbPathNet_summary">Directory for network engines where Gaviota tablebases are installed.</string>
    <string name="prefs_rtbPath_title">Syzygy Directory</string>
    <string name="prefs_rtbPath_summary">Directory where Syzygy tablebases are installed. Leave blank to use default directory</string>
    <string name="prefs_rtbPathNet_title">Syzygy Network Directory</string>
    <string name="prefs_rtbPathNet_summary">Directory for network engines where Syzygy tablebases are installed.</string>
    <string name="prefs_guideShowOnStart_title">Startup Guide</string>
    <string name="prefs_guideShowOnStart_summary">Show the startup guide the next time the program is started.</string>
</resources>