<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <Preference
        app:key="blank"
        app:title=""
        app:summary=""/>
    <PreferenceCategory
        app:title="@string/prefs_time_control">
        <ListPreference
            app:key="movesPerSession"
            app:title="@string/prefs_movesPerSession_title"
            app:summary="@string/prefs_movesPerSession_summary"
            app:entryValues="@array/moves_per_session_values"
            app:entries="@array/moves_per_session_texts"
            app:defaultValue="@string/moves_per_session_default">
        </ListPreference>
        <ListPreference
            app:key="timeControl"
            app:title="@string/prefs_timeControl_title"
            app:summary="@string/prefs_timeControl_summary"
            app:entryValues="@array/time_control_values"
            app:entries="@array/time_control_texts"
            app:defaultValue="@string/time_control_default">
        </ListPreference>
        <ListPreference
            app:key="timeIncrement"
            app:title="@string/prefs_timeIncrement_title"
            app:summary="@string/prefs_timeIncrement_summary"
            app:entryValues="@array/time_increment_values"
            app:entries="@array/time_increment_texts"
            app:defaultValue="@string/time_increment_default">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_engine_settings">
        <CheckBoxPreference
            app:key="ponderMode"
            app:title="@string/prefs_ponderMode_title"
            app:summary="@string/prefs_ponderMode_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference
            app:key="hashMB"
            app:title="@string/prefs_hash_title"
            app:summary="@string/prefs_hash_summary"
            app:entryValues="@array/engine_hash_values"
            app:entries="@array/engine_hash_texts"
            app:defaultValue="@string/engine_hash_default">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_hints">
        <CheckBoxPreference
            app:key="showThinking"
            app:title="@string/prefs_showThinking_title"
            app:summary="@string/prefs_showThinking_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="whiteBasedScores"
            app:title="@string/prefs_whiteBasedScores_title"
            app:summary="@string/prefs_whiteBasedScores_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="bookHints"
            app:title="@string/prefs_bookHints_title"
            app:summary="@string/prefs_bookHints_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <ListPreference
            app:key="ecoHints"
            app:title="@string/prefs_ecoHints_title"
            app:summary="@string/prefs_ecoHints_summary"
            app:entryValues="@array/ecoHints_values"
            app:entries="@array/ecoHints_texts"
            app:defaultValue="1">
        </ListPreference>
        <ListPreference
            app:key="thinkingArrows"
            app:title="@string/prefs_thinkingArrows_title"
            app:summary="@string/prefs_thinkingArrows_summary"
            app:entryValues="@array/thinking_arrows_values"
            app:entries="@array/thinking_arrows_texts"
            app:defaultValue="@string/thinking_arrows_default">
        </ListPreference>
        <CheckBoxPreference
            app:key="highlightLastMove"
            app:title="@string/highlight_last_move_title"
            app:summary="@string/highlight_last_move_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="materialDiff"
            app:title="@string/material_diff_title"
            app:summary="@string/material_diff_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_playing_options">
        <EditTextPreference
            app:key="playerName"
            app:title="@string/prefs_playerName_title"
            app:summary="@string/prefs_playerName_summary"
            app:defaultValue="Player">
        </EditTextPreference>
        <CheckBoxPreference
            app:key="autoSwapSides"
            app:title="@string/prefs_autoSwapSides_title"
            app:summary="@string/prefs_autoSwapSides_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="playerNameFlip"
            app:title="@string/prefs_playerNameFlip_title"
            app:summary="@string/prefs_playerNameFlip_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_user_interface_appearance">
        <CheckBoxPreference
            app:key="fullScreenMode"
            app:title="@string/prefs_fullScreenMode_title"
            app:summary="@string/prefs_fullScreenMode_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference
            app:key="language"
            app:title="@string/prefs_language_title"
            app:summary="@string/prefs_language_summary"
            app:entryValues="@array/language_values"
            app:entries="@array/language_texts"
            app:defaultValue="@string/language_default">
        </ListPreference>
        <ListPreference
            app:key="fontSize"
            app:title="@string/prefs_fontSize_title"
            app:summary="@string/prefs_fontSize_summary"
            app:entryValues="@array/font_size_values"
            app:entries="@array/font_size_texts"
            app:defaultValue="@string/font_size_default">
        </ListPreference>
        <ListPreference
            app:key="viewPieceType"
            app:title="@string/prefs_viewPieceType_title"
            app:summary="@string/prefs_viewPieceType_summary"
            app:entryValues="@array/viewPieceType_values"
            app:entries="@array/viewPieceType_texts"
            app:defaultValue="@string/viewPieceType_default">
        </ListPreference>
        <ListPreference
            app:key="viewPieceSet"
            app:title="@string/prefs_viewPieceSet_title"
            app:summary="@string/prefs_viewPieceSet_summary"
            app:entryValues="@array/viewPieceSet_values"
            app:entries="@array/viewPieceSet_texts"
            app:defaultValue="@string/viewPieceSet_default">
        </ListPreference>
        <CheckBoxPreference
            app:key="blindMode"
            app:title="@string/prefs_blindMode_title"
            app:summary="@string/prefs_blindMode_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="vibrateEnabled"
            app:title="@string/prefs_vibrateEnabled_title"
            app:summary="@string/prefs_vibrateEnabled_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="moveSoundEnabled"
            app:title="@string/prefs_moveSoundEnabled_title"
            app:summary="@string/prefs_moveSoundEnabled_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference
            app:key="moveAnnounceType"
            app:title="@string/prefs_moveAnnounceType_title"
            app:summary="@string/prefs_moveAnnounceType_summary"
            app:entryValues="@array/move_announce_type_values"
            app:entries="@array/move_announce_type_texts"
            app:defaultValue="@string/move_announce_type_default">
        </ListPreference>
        <CheckBoxPreference
            app:key="wakeLock"
            app:title="@string/prefs_wakeLock_title"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="drawSquareLabels"
            app:title="@string/prefs_drawSquareLabels_title"
            app:summary="@string/prefs_drawSquareLabels_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="leftHanded"
            app:title="@string/prefs_leftHanded_title"
            app:summary="@string/prefs_leftHanded_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="animateMoves"
            app:title="@string/prefs_animateMoves_title"
            app:summary="@string/prefs_animateMoves_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="autoScrollTitle"
            app:title="@string/prefs_autoScrollTitle_title"
            app:summary="@string/prefs_autoScrollTitle_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <Preference
            app:fragment="com.asile.easychess.activities.fragments.ColorsPreferenceFragment"
            app:key="colors"
            app:title="@string/prefs_colors_title"
            app:summary="@string/prefs_colors_summary">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_user_interface_behavior">
        <Preference
            app:fragment="com.asile.easychess.activities.fragments.ButtonPreferenceFragment"
            app:key="buttonSettings"
            app:title="@string/prefs_buttonSettings_title"
            app:summary="@string/prefs_buttonSettings_summary">
        </Preference>
        <CheckBoxPreference
            app:key="oneTouchMoves"
            app:title="@string/prefs_quickMoveInput_title"
            app:summary="@string/prefs_quickMoveInput_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <ListPreference
            app:key="squareSelectType"
            app:title="@string/prefs_squareSelectType_title"
            app:summary="@string/prefs_squareSelectType_summary"
            app:entryValues="@array/squareSelectType_values"
            app:entries="@array/squareSelectType_texts"
            app:defaultValue="@string/squareSelectType_default">
        </ListPreference>
        <CheckBoxPreference
            app:key="dragMoveEnabled"
            app:title="@string/prefs_dragMoveEnabled_title"
            app:summary="@string/prefs_dragMoveEnabled_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <ListPreference
            app:key="scrollSensitivity"
            app:title="@string/prefs_scrollSensitivity_title"
            app:summary="@string/prefs_scrollSensitivity_summary"
            app:entryValues="@array/scroll_sensitivity_values"
            app:entries="@array/scroll_sensitivity_texts"
            app:defaultValue="@string/scroll_sensitivity_default">
        </ListPreference>
        <CheckBoxPreference
            app:key="invertScrollDirection"
            app:title="@string/prefs_invertScrollDirection_title"
            app:summary="@string/prefs_invertScrollDirection_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="scrollGames"
            app:title="@string/prefs_scrollGames_title"
            app:summary="@string/prefs_scrollGames_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="autoScrollMoveList"
            app:title="@string/prefs_autoScrollMoveList_title"
            app:summary="@string/prefs_autoScrollMoveList_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <ListPreference
            app:key="autoDelay"
            app:title="@string/prefs_autoDelay_title"
            app:summary="@string/prefs_autoDelay_summary"
            app:entryValues="@array/autoDelay_values"
            app:entries="@array/autoDelay_texts"
            app:defaultValue="@string/autoDelay_default">
        </ListPreference>
        <CheckBoxPreference
            app:key="discardVariations"
            app:title="@string/prefs_discardVariations_title"
            app:summary="@string/prefs_discardVariations_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_other">
        <CheckBoxPreference
            app:key="guideShowOnStart"
            app:title="@string/prefs_guideShowOnStart_title"
            app:summary="@string/prefs_guideShowOnStart_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
<!--        <Preference-->
<!--            app:fragment="com.asile.easychess.activities.fragments.BookPreferenceFragment"-->
<!--            app:key="bookSettings"-->
<!--            app:title="@string/prefs_bookSettings_title"-->
<!--            app:summary="@string/prefs_bookSettings_summary">-->
<!--        </Preference>-->
<!--        <Preference-->
<!--            app:fragment="com.asile.easychess.activities.fragments.PgnPreferenceFragment"-->
<!--            app:key="pgnSettings"-->
<!--            app:title="@string/prefs_pgnSettings_title"-->
<!--            app:summary="@string/prefs_pgnSettings_summary">-->
<!--        </Preference>-->
<!--        <Preference-->
<!--            app:fragment="com.asile.easychess.activities.fragments.EgtbPreferenceFragment"-->
<!--            app:key="egtbSettings"-->
<!--            app:title="@string/prefs_egtbSettings_title">-->
<!--        </Preference>-->
    </PreferenceCategory>
</PreferenceScreen>
