<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/prefs_pgn_viewer">
        <CheckBoxPreference
            app:key="viewVariations"
            app:title="@string/prefs_viewVariations_title"
            app:summary="@string/prefs_viewVariations_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="viewComments"
            app:title="@string/prefs_viewComments_title"
            app:summary="@string/prefs_viewComments_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="viewNAG"
            app:title="@string/prefs_viewNAG_title"
            app:summary="@string/prefs_viewNAG_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="viewHeaders"
            app:title="@string/prefs_viewHeaders_title"
            app:summary="@string/prefs_viewHeaders_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="showVariationLine"
            app:title="@string/prefs_showVariationLine_title"
            app:summary="@string/prefs_showVariationLine_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_pgn_import">
        <CheckBoxPreference
            app:key="importVariations"
            app:title="@string/prefs_importVariations_title"
            app:summary="@string/prefs_importVariations_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="importComments"
            app:title="@string/prefs_importComments_title"
            app:summary="@string/prefs_importComments_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="importNAG"
            app:title="@string/prefs_importNAG_title"
            app:summary="@string/prefs_importNAG_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/prefs_pgn_export">
        <CheckBoxPreference
            app:key="exportVariations"
            app:title="@string/prefs_exportVariations_title"
            app:summary="@string/prefs_exportVariations_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="exportComments"
            app:title="@string/prefs_exportComments_title"
            app:summary="@string/prefs_exportComments_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="exportNAG"
            app:title="@string/prefs_exportNAG_title"
            app:summary="@string/prefs_exportNAG_summary"
            app:defaultValue="true">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="exportPlayerAction"
            app:title="@string/prefs_exportPlayerAction_title"
            app:summary="@string/prefs_exportPlayerAction_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
        <CheckBoxPreference
            app:key="exportTime"
            app:title="@string/prefs_exportTime_title"
            app:summary="@string/prefs_exportTime_summary"
            app:defaultValue="false">
        </CheckBoxPreference>
    </PreferenceCategory>
</PreferenceScreen>
