<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="egtbBlank"
        app:title=""
        app:summary=""/>
    <CheckBoxPreference
        app:key="tbHints"
        app:title="@string/prefs_tbHints_title"
        app:summary="@string/prefs_tbHints_summary"
        app:defaultValue="true">
    </CheckBoxPreference>
    <CheckBoxPreference
        app:key="tbHintsEdit"
        app:title="@string/prefs_tbHintsEdit_title"
        app:summary="@string/prefs_tbHintsEdit_summary"
        app:defaultValue="true">
    </CheckBoxPreference>
    <CheckBoxPreference
        app:key="tbRootProbe"
        app:title="@string/prefs_tbRootProbe_title"
        app:summary="@string/prefs_tbRootProbe_summary"
        app:defaultValue="true">
    </CheckBoxPreference>
    <CheckBoxPreference
        app:key="tbEngineProbe"
        app:title="@string/prefs_tbEngineProbe_title"
        app:summary="@string/prefs_tbEngineProbe_summary"
        app:defaultValue="true">
    </CheckBoxPreference>
    <org.petero.droidfish.activities.util.EditFilePreference
        app:key="gtbPath"
        app:title="@string/prefs_gtbPath_title"
        app:summary="@string/prefs_gtbPath_summary"
        pickDirectory="true"
        defaultPath="DroidFish/gtb"
        app:defaultValue="">
    </org.petero.droidfish.activities.util.EditFilePreference>
    <EditTextPreference
        app:key="gtbPathNet"
        app:title="@string/prefs_gtbPathNet_title"
        app:summary="@string/prefs_gtbPathNet_summary"
        app:defaultValue="">
    </EditTextPreference>
    <org.petero.droidfish.activities.util.EditFilePreference
        app:key="rtbPath"
        app:title="@string/prefs_rtbPath_title"
        app:summary="@string/prefs_rtbPath_summary"
        pickDirectory="true"
        defaultPath="DroidFish/rtb"
        app:defaultValue="">
    </org.petero.droidfish.activities.util.EditFilePreference>
    <EditTextPreference
        app:key="rtbPathNet"
        app:title="@string/prefs_rtbPathNet_title"
        app:summary="@string/prefs_rtbPathNet_summary"
        app:defaultValue="">
    </EditTextPreference>
</PreferenceScreen>
